[project]
name = "sea-raft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kavorite", email = "kavorite@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.15.2",
]

[project.scripts]
# Note: Ensure this entry point 'sea_raft:main' exists relative
# to the 'core' directory (e.g., core/sea_raft.py with a main function)
# If your main script is custom.py, you might change this or add another script.
sea-raft = "sea_raft:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sea_raft"]
